@@ -4965,3 +4965,8 @@ Mon Jan 13 18:17:43 2003                        Michael Jennings (mej)
 Fixed an error in the "select_line" description in the man page
 spotted by Yasufumi Haga <yasufumi.haga@nifty.com>.
 ----------------------------------------------------------------------
+Wed Jan 22 15:12:36 2003                        Michael Jennings (mej)
+
+Yasufumi Haga <yasufumi.haga@nifty.com> found another typo in the man
+page, this one concerning the non-existent "bold multichar" font.
+----------------------------------------------------------------------
